maded few changesto the date and time format and few ui changes

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,7 +47,7 @@ html {
     #A723EE 0%,
     #453DE4 45%,
     #A112BA 75%,
-    #96F6E6 100%
+    #66ccbb 100%
   );
 }
 /* Custom 3-color gradient */
